# remucs

./: .editorconfig  .flake8  .gitignore  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml  remucs.py  requirements.txt  setup.cfg
.github/workflows/: check.yml  publish.yml  test.yml
src/remucs/: __init__.py  __main__.py  analysis.py  common.py  options.py  remucs.py  synthesis.py  tuning.py  utils.py
src/sandbox/: synth.py  tuning.py
src/tests/: test_remucs.py
tests/: test_remucs.py  test_utils.py
