[project.urls]
Homepage = "https://github.com/jurihock/remucs"
Documentation = "https://github.com/jurihock/remucs/blob/main/README.md"
Repository = "https://github.com/jurihock/remucs.git"
Issues = "https://github.com/jurihock/remucs/issues"

[project]
version = "0.3"
name = "remucs"
description = "Demucs wrapper for remixing audio files with additional customizations"
authors = [{name = "Juergen Hock", email = "juergen.hock@jurihock.de"}]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
keywords = [
  "digital",
  "audio",
  "signal",
  "processing",
  "dasp",
  "dafx",
  "effects",
  "filter",
  "demucs",
  "frequency",
  "phase",
  "spectrum",
  "algorithms",
  "analysis",
  "synthesis",
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Other Audience",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Artistic Software",
  "Topic :: Education",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
  "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.11"
dependencies = [
  "click",
  "numpy",
  "soundfile",
  "tqdm",
]

[project.optional-dependencies]
demucs = ["demucs>=4.0"]

[project.scripts]
remucs = "remucs.remucs:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["remucs"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
