[metadata]
name = remucs
version = 0.1.3
author = Juergen Hock
author_email = juergen.hock@jurihock.de
url = https://github.com/jurihock/remucs
description = Demucs wrapper for remixing audio files with additional customizations
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
keywords =
    digital
    audio
    signal
    processing
    dasp
    dafx
    effects
    filter
    demucs
    frequency
    phase
    spectrum
    algorithms
    analysis
    synthesis
    python
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Artistic Software
    Topic :: Education
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Topic :: Multimedia :: Sound/Audio :: Sound Synthesis
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries

[options]
package_dir=
    = src
packages =
    remucs
python_requires =
    >= 3.11
install_requires =
    click
    numpy
    packaging
    soundfile
    tqdm

[options.extras_require]
demucs =
    demucs

[options.entry_points]
console_scripts =
    remucs = remucs.remucs:cli
